# hindsight-custom

./: .codedbignore  .gitattributes  .gitignore  AGENTS.md  IMPROVEMENTS.md  README.md  build.sh  install.sh  pyproject.toml
.github/workflows/: release-installer.yml
core/: __init__.py  client.py  config.py  project.py
installer/: __init__.py  tui.py
integrations/claude-code/: README.md
integrations/claude-code/.claude-plugin/: plugin.json
integrations/claude-code/hooks/: hooks.json  recall.sh  retain.sh
integrations/codex/: README.md  hooks.json
integrations/codex/hooks/: recall.py  retain.py
integrations/copilot/: README.md  copilot-instructions.md  hooks.json  mcp.example.json
integrations/copilot/.claude-plugin/: plugin.json
integrations/hermes/: __init__.py  config.example.json
integrations/opencode/: README.md  package.json  tsconfig.json
integrations/opencode/src/: client.ts  index.ts  project.ts
mcp_server/: __init__.py  __main__.py  config.example.json  hindsight-mcp-launcher.sh  server.py
scripts/: build-installer-binary.sh  dedup_banks.py
